about me/portfolio

--- a/about me: portfolio/about me.html
+++ b/about me: portfolio/about me.html
@@ -4,12 +4,13 @@
     <meta charset="utf-8">
     <title>Jason Chang Portfolio</title>
     <link rel="stylesheet" href="style1.css">
-    </head>
+  </head>
+
   <body>
 
 <nav>
 <strong>About Me |</strong>
-<<a href="portfolio.html">Portfolio</a>
+<a href="portfolio.html">Portfolio</a>
 <hr>
 </nav>
 
@@ -20,17 +21,17 @@
 <hr>
 </nav>
 
-<nav>
+
   <h2>I ENJOY LIFE AS A WEB-DEVELOPER</h2>
 
 <p>I'm Jason Chang, I studied front-end web-development at General Assembly
   located in Santa Monica. I specialize in the creation of responsive websites.
 </p>
-</nav>
 
-<nav>
+
+
   <img src="facebook picture.jpg" alt="facebook" style="width:175px;height:270px;">
-</nav>
+
 
 
 
